# houseme

./: home.py  pyproject.toml
data/: incc.parquet
modeling/: a.csv  house.ipynb
pages/: comprar_imovel_na_planta.py  incc.py
style/: style.css
