[tool.poetry]
name = "houseme"
version = "0.1.0"
description = ""
authors = ["Leonardo Firmino <leonardo.borges@fanatee.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
streamlit = "^1.34.0"
plotly = "^5.22.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
